--- a/core/src/main/resources/bundel/applicationMessage_fa.properties
+++ b/core/src/main/resources/bundel/applicationMessage_fa.properties
@@ -1,8 +1,11 @@
+application.name.part1 = Alireza
+application.name.part2 = App
 login.txt = Login
 login.username = Username
 login.password = Password
 login.submit = Submit
 login.cellphone = Cellphone
+
 error.404 = 404
 error.404.line1 = Page Not Found !
 error.404.line2 = Sorry, but the resource you are looking for has not been found.
@@ -15,3 +18,31 @@ error.access.denied = Access Denied
 error.access.denied.line1 = Please Check Your Permissions !
 error.access.denied.line2 = Sorry, but you have no access to this page.
 error.access.denied.button = Back to Dashboard
+
+topbar.restart = Restart
+topbar.logout = Log Out
+topbar.help = Help Desk
+topbar.setting = Setting
+topbar.todo = Task
+topbar.message = Messages
+topbar.profile =User Profile
+
+footer.terms.of.service = TERMS OF CONDITIONS
+footer.privacy = PRIVACY
+footer.email = email@email.com
+footer.phone = +98 912 892 28 99
+footer.copy.rights = Alireza Amirkhani | All rights reserved.
+
+side.menu.dashboard = Dashboard
+side.menu.alarm = Alarm
+side.menu.message = Messages
+side.menu.statistic = Statistic
+side.menu.profile = User Profile
+side.menu.setting = Setting
+side.menu.help = Help
+side.menu.library = Library
+side.menu.control.panel = Control Panel
+side.menu.about = About
+
+
+
