--- a/core/src/main/resources/bundel/applicationMessage_fa.properties
+++ b/core/src/main/resources/bundel/applicationMessage_fa.properties
@@ -1,24 +1,27 @@
 application.name.part1 = Alireza
 application.name.part2 = App
+#login
 login.txt = Login
 login.username = Username
 login.password = Password
 login.submit = Submit
 login.cellphone = Cellphone
-
+#error 404
 error.404 = 404
 error.404.line1 = Page Not Found !
 error.404.line2 = Sorry, but the resource you are looking for has not been found.
 error.404.button = Back to Dashboard
+#error 500
 error.500 = Error
 error.500.line1 = Exception Occured!
 error.500.line2 = Please contact system administrator.
 error.500.button = Back to Dashboard
+#error access denied
 error.access.denied = Access Denied
 error.access.denied.line1 = Please Check Your Permissions !
 error.access.denied.line2 = Sorry, but you have no access to this page.
 error.access.denied.button = Back to Dashboard
-
+#topbar
 topbar.restart = Restart
 topbar.logout = Log Out
 topbar.help = Help Desk
@@ -26,13 +29,13 @@ topbar.setting = Setting
 topbar.todo = Task
 topbar.message = Messages
 topbar.profile =User Profile
-
+#footer
 footer.terms.of.service = TERMS OF CONDITIONS
 footer.privacy = PRIVACY
 footer.email = email@email.com
 footer.phone = +98 912 892 28 99
 footer.copy.rights = Alireza Amirkhani | All rights reserved.
-
+#menu sidebar
 side.menu.dashboard = Dashboard
 side.menu.alarm = Alarm
 side.menu.message = Messages
